added memes data

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 32px;
   background: linear-gradient(.25turn, #672280, #A626D3);
+  color: white;
   /* height: 65px; */
 
 }
