--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -9,12 +9,6 @@
   gap: 17px;
 }
 
-.button--layout {
-  display: grid;
-  grid-template: 40px 40px / 1fr 1fr;
-  gap: 17px;
-}
-
 .form--input {
   border: 1px solid #D5D4D8;
   border-radius: 5px;
@@ -33,4 +27,5 @@
 .meme--image {
   max-width: 100%;
   max-height: 100%;
+  margin: 24px;
 }
