--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 32px;
-  background: linear-gradient(.25turn, #672280, #A626D3);
+  background: linear-gradient(.25turn, #223880, #4d66d4);
   color: white;
   /* height: 65px; */
 
